# strava-analysis

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
scripts/: main.py  test.py
strava/: oauth.py  strava.py
